<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:padding="@dimen/margin_padding_10dp"
                android:layout_marginTop="@dimen/margin_padding_30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_username"
                    android:textColorHint="@color/colorBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/full_name" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_email"
                android:padding="@dimen/margin_padding_10dp"
                android:layout_width="match_parent"
                android:layout_below="@id/input_layout_name"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_email"
                    android:textColorHint="@color/colorBlack"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/email_hint" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_number"
                android:padding="@dimen/margin_padding_10dp"
                android:layout_width="match_parent"
                android:layout_below="@id/input_email"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_phone_number"
                    android:textColorHint="@color/colorBlack"
                    android:maxLength="10"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/mobile_number" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_password"
                android:padding="@dimen/margin_padding_10dp"
                android:layout_width="match_parent"
                android:layout_below="@id/input_number"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_password"
                    android:textColorHint="@color/colorBlack"
                    android:maxLength="10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/password" />
            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/rb_sex"
                android:padding="@dimen/margin_padding_10dp"
                android:layout_below="@id/input_password">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb_male"
                    android:text="@string/male"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_padding_30dp"
                    android:layout_marginRight="@dimen/margin_padding_30dp"
                    android:id="@+id/rb_female"
                    android:text="@string/female"/>
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_inst_name"
                android:padding="@dimen/margin_padding_10dp"
                android:layout_width="match_parent"
                android:layout_below="@id/rb_sex"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/et_institution_name"
                    android:textColorHint="@color/colorBlack"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inst_name" />
            </android.support.design.widget.TextInputLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:id="@+id/rl1"
                android:layout_below="@id/input_inst_name"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cb_tnc"
                    android:layout_marginLeft="@dimen/margin_padding_5dp"
                    android:layout_marginRight="@dimen/margin_padding_5dp"
                    android:padding="@dimen/margin_padding_10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="-10dp"
                    android:layout_toRightOf="@id/cb_tnc"
                    android:id="@+id/tv2"
                    android:layout_toEndOf="@id/cb_tnc"
                    android:layout_centerVertical="true"
                    android:text="@string/agree"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_toRightOf="@id/tv2"
                    android:layout_toEndOf="@id/tv2"
                    android:onClick="onClickTermAndConditions"
                    android:id="@+id/tnc"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:layout_centerVertical="true"
                    android:text="@string/term"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_sign_up"
                android:onClick="onClickSignUp"
                android:layout_marginLeft="@dimen/margin_padding_50dp"
                android:textAllCaps="false"
                android:background="@color/colorPrimary"
                android:textSize="@dimen/text_size_16sp"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/margin_padding_10dp"
                android:layout_marginRight="@dimen/margin_padding_50dp"
                android:layout_below="@id/rl1"
                android:text="@string/sign_ups"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_below="@id/btn_sign_up"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/text_size_16sp"
                    android:padding="@dimen/margin_padding_10dp"
                    android:text="@string/have_an_ac"
                    android:id="@+id/textView" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/login"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:onClick="onClickLogIn"
                    android:textSize="@dimen/text_size_16sp"
                    android:textColor="@drawable/text_color_selector"
                    android:paddingTop="@dimen/margin_padding_10dp"
                    android:paddingBottom="@dimen/margin_padding_10dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/textView"
                    android:layout_toEndOf="@+id/textView" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>