<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="@dimen/margin_padding_30dp"
        android:layout_marginTop="@dimen/margin_padding_30dp"
        android:src="@drawable/edunuts_partners_logo" />

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:focusableInTouchMode="true"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:singleLine="true"
                android:textColorHint="@color/colorBlack" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl1"
        android:layout_centerVertical="true"
        android:drawableEnd="@drawable/ic_action_name"
        android:drawableRight="@drawable/ic_action_name"
        android:gravity="center_vertical"
        android:text="@string/username_is_incorrect"
        android:textColor="@color/colorWarning"
        android:visibility="invisible" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_warning">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:singleLine="true"
            android:textColorHint="@color/colorBlack" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_warning2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_password"
        android:layout_centerVertical="true"
        android:drawableEnd="@drawable/ic_action_name"
        android:drawableRight="@drawable/ic_action_name"
        android:gravity="center_vertical"
        android:text="@string/username_is_incorrect"
        android:textColor="@color/colorWarning"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_warning2"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@color/colorPrimary"
        android:onClick="onClickLogin"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_16sp" />

    <TextView
        android:id="@+id/btn_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:onClick="onClickForgetPassword"
        android:padding="@dimen/margin_padding_10dp"
        android:text="@string/forget_password"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_forget_password"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_padding_10dp"
            android:paddingTop="@dimen/margin_padding_10dp"
            android:text="@string/dont_have"
            android:textSize="@dimen/text_size_16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@id/tv1"
            android:onClick="onClickSignUp"
            android:padding="@dimen/margin_padding_10dp"
            android:text="@string/sign_up"
            android:textColor="@drawable/text_color_selector"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>
