<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".OtpActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
<RelativeLayout
    android:layout_width="match_parent"
    android:id="@+id/rl_main"
    android:visibility="gone"
    android:layout_below="@id/toolbar"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_30dp"
        android:id="@+id/textView"
        android:padding="@dimen/margin_padding_10dp"
        android:textSize="@dimen/text_size_20sp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:text="@string/otp_text"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:focusableInTouchMode="true"
        android:id="@+id/rl1"
        android:layout_below="@id/textView"
        android:layout_height="wrap_content">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_otp"
        android:padding="@dimen/margin_padding_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_otp"
            android:textColorHint="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/enter_otp" />
    </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_otp_verify"
        android:onClick="onClickOtpVerify"
        android:layout_marginLeft="@dimen/margin_padding_50dp"
        android:textAllCaps="false"
        android:background="@color/colorPrimary"
        android:textSize="@dimen/text_size_16sp"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="@dimen/margin_padding_10dp"
        android:layout_marginRight="@dimen/margin_padding_50dp"
        android:layout_below="@id/rl1"
        android:text="@string/verify"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_otp_verify"
        android:layout_marginTop="@dimen/margin_padding_10dp"
        android:layout_marginLeft="@dimen/margin_padding_50dp"
        android:onClick="onClickReset"
        android:text="@string/resend_otp"
        android:textSize="@dimen/text_size_16sp"
        android:textColor="@drawable/text_color_selector"
        android:layout_marginRight="@dimen/margin_padding_50dp"
        android:background="@android:color/transparent"/>
</RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:id="@+id/rl_background">
        <TextView
            android:layout_width="match_parent"
            android:padding="@dimen/margin_padding_30dp"
            android:textSize="@dimen/text_size_16sp"
            android:id="@+id/sit_back"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/sit_back"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_below="@+id/sit_back"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/margin_padding_30dp"
            android:id="@+id/progress_bar"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</RelativeLayout>
